# EExApp

./: .gitignore  CMakeLists.txt  GRU_multiCritic_multiActor.txt  O-RAN_xApp_Design_Summary.txt  README.md  Rules.doc  Rules.txt  Structure.txt  compile_commands.json  flexric.conf  jie@35.9.43.233  mcma_ppo.txt  readme-md.md  readme.txt  requirements.txt
SGRPO/: README.md  config.py  debug_environment.py  env.py  evaluate_model.py  model.py  model_analyzer.py  plot_moving_averages.py  requirements.txt  sgrpo.py  state_encoder.py  test_dimensions.py  test_flag_checking.py  test_reward_fix.py  test_training_timeout.py  test_visualization.py  utils.py  visualization.py
SGRPO/sgrpo_training_plots/: epoch_10_metrics.json  epoch_20_metrics.json  latest_policy.pt  policy_epoch10.pt  policy_epoch20.pt  sgrpo_detailed_metrics.json  sgrpo_training_metrics.json  sgrpo_training_summary.txt  step_metrics_epoch_1.json  step_metrics_epoch_10.json  step_metrics_epoch_11.json  step_metrics_epoch_12.json  step_metrics_epoch_13.json  step_metrics_epoch_14.json  step_metrics_epoch_15.json  step_metrics_epoch_16.json  step_metrics_epoch_17.json  step_metrics_epoch_18.json  step_metrics_epoch_19.json  step_metrics_epoch_2.json  step_metrics_epoch_20.json  (+16 more)
algorithms/: README_ppo_visualization.md  config.py  data.py  env.py  example_ppo_with_viz.py  gat.py  mcma_ppo.py  ppo.py  requirements_visualization.txt  state_encoder.py  visualization.py
cmake/: cmake_uninstall.cmake.in
examples/: intergration architecture.txt
examples/xApp/c/ctrl/: CMakeLists.txt  eexapp.c  xapp_peihao.c
(+36 files in other folders)
